# mobile-license-plate-reader

./: .gitignore  README.md  index.html
onnx_project/: README.md  index.html
onnx_project/src/: main.js  ocr.js  yolo.js
src/: camera.js  detector.js  main.js  wasmLoader.js
static/model/: yolo.js  yolo.wasm
wasm_ncnn/: .gitignore  CMakeLists.txt  README.md
wasm_ncnn/assets/: dict.txt  paddle.param  yolo.param
wasm_ncnn/src/: main.cpp
yolo_tools/: README.md  convert_opset.py  export_ncnn.py  export_onnx.py  export_pnnx.py  export_tf.py  export_torchscript.py  main.py  pyproject.toml
