[project]
name = "my-very-own-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio[ffmpeg]>=2.37.2",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "supervision>=0.27.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "ultralytics>=8.4.9",
]

[tool.uv.sources]

